--- a/Web/Bookworm.Web/Views/Quote/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Upload.cshtml
@@ -13,29 +13,38 @@
     <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
     <div class="uploadQuoteBtnsContainer">
         <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#movieModal">
-            <strong>Movie Quote</strong><i class="fa-solid fa-film ms-3 fa-xl"></i>
+            Movie Quote<i class="fa-solid fa-film ms-3 fa-xl"></i>
         </button>
 
         <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#bookModal">
-            <strong>Book Quote</strong><i class="fa-solid fa-book ms-3 fa-xl"></i>
+            Book Quote<i class="fa-solid fa-book ms-3 fa-xl"></i>
         </button>
 
         <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#otherModal">
-            <strong>General Quote</strong><i class="fa-solid fa-user-pen ms-3 fa-xl"></i>
+            General Quote<i class="fa-solid fa-user-pen ms-3 fa-xl"></i>
         </button>
     </div>
 
+    @* Movie Quote Modal *@
     <div class="modal fade" id="movieModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-4" id="exampleModalLabel">Upload Movie Quote</h1>
-                    <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
+                    <i class="fa-regular fa-circle-xmark btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
                 </div>
                 <div class="modal-body uploadQuoteModalContainer">
                     <img class="col-4" src="~/images/quote/movieQuote.jpg" />
                     <form id="movieQuoteForm" method="post" asp-controller="Quote" asp-action="Upload">
-                        <partial name="PartialViews/Quotes/QuotesTypesInputs/_MovieQuoteInputsPartial" />
+                        <input type="hidden" asp-for="@Model.Type" value="@QuoteType.MovieQuote" />
+                        <div class="form-group justify-content-center">
+                            <label asp-for="@Model.Content"><strong>Content</strong></label>
+                            <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
+                        </div>
+                        <div class="form-group my-3">
+                            <label asp-for="@Model.MovieTitle"><strong>Movie Title</strong></label>
+                            <input asp-for="@Model.MovieTitle" value="@Model.MovieTitle" type="text" class="form-control">
+                        </div>
                         <div class="text-center mt-4 mb-5">
                             <button type="submit" class="btn button form-button">
                                 <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
@@ -47,17 +56,30 @@
         </div>
     </div>
 
+    @* Book Quote Modal *@
     <div class="modal fade" id="bookModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-4" id="exampleModalLabel">Upload Book Quote</h1>
-                    <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
+                    <i class="fa-regular fa-circle-xmark btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
                 </div>
                 <div class="modal-body uploadQuoteModalContainer">
                     <img class="img-fluid" src="~/images/quote/bookQuote.jpg" />
                     <form id="bookQuoteForm" method="post" asp-controller="Quote" asp-action="Upload">
-                        <partial name="PartialViews/Quotes/QuotesTypesInputs/_BookQuoteInputsPartial" />
+                        <input type="hidden" asp-for="@Model.Type" value="@QuoteType.BookQuote" />
+                        <div class="form-group justify-content-center">
+                            <label asp-for="@Model.Content"><strong>Content</strong></label>
+                            <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
+                        </div>
+                        <div class="form-group my-3">
+                            <label asp-for="@Model.BookTitle"><strong>Book Title</strong></label>
+                            <input asp-for="@Model.BookTitle" value="@Model.BookTitle" type="text" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="@Model.AuthorName"><strong>Author's Name</strong></label>
+                            <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control">
+                        </div>
                         <div class="text-center mt-4 mb-5">
                             <button type="submit" class="btn button form-button">
                                 <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
@@ -69,17 +91,26 @@
         </div>
     </div>
 
+    @* General Quote Modal *@
     <div class="modal fade" id="otherModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-4" id="exampleModalLabel">Upload General Quote</h1>
-                    <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
+                    <i class="fa-regular fa-circle-xmark btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
                 </div>
                 <div class="modal-body uploadQuoteModalContainer">
                     <img class="col-4" src="~/images/quote/generalQuote.jpg" />
                     <form id="generalQuoteForm" method="post" asp-controller="Quote" asp-action="Upload">
-                        <partial name="PartialViews/Quotes/QuotesTypesInputs/_GeneralQuoteInputsPartial" />
+                        <input type="hidden" asp-for="@Model.Type" value="@QuoteType.GeneralQuote" />
+                        <div class="form-group justify-content-center">
+                            <label asp-for="@Model.Content"><strong>Content</strong></label>
+                            <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
+                        </div>
+                        <div class="form-group my-3">
+                            <label asp-for="@Model.AuthorName"><strong>Author's Name</strong></label>
+                            <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control">
+                        </div>
                         <div class="text-center mt-4 mb-5">
                             <button type="submit" class="btn button form-button">
                                 <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
@@ -90,7 +121,6 @@
             </div>
         </div>
     </div>
-
 </section>
 
 @section Scripts {
