--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesTablePartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesTablePartial.cshtml
@@ -58,7 +58,7 @@ else
         </h3>
     }
     <div class="tableContainer">
-        <table class="table table-hover table-dark table-bordered table-responsive fs-5" id="dataTable">
+        <table class="table table-hover table-dark table-bordered fs-5" id="dataTable">
             <thead>
                 <tr>
                     <th class="text-center align-middle" scope="col">#</th>
