--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_BooksSearchInputPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_BooksSearchInputPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="input-group mt-4 bookSearchInputGroup">
+﻿<div class="input-group mt-4 searchInputGroup">
     <input type="text"
            class="form-control bookSearchInput"
            placeholder="Search by book title, author or publisher..."
