--- a/Web/Bookworm.Web/wwwroot/css/site.css
+++ b/Web/Bookworm.Web/wwwroot/css/site.css
@@ -7,7 +7,6 @@
     --clr-primary: #34495E;
     --clr-secondary: #1abc9c;
     --clr-custom-divider: #2c3e50;
-
     --nav-minHeight: 100px;
     --footer-minHeight: 100px;
 }
@@ -27,6 +26,38 @@ body {
 main {
     margin: 0 2rem;
 }
+
+.searchInputGroup input,
+.searchInputGroup input:focus {
+    border: solid 3px black;
+    background-color: var(--clr-primary);
+    color: var(--clr-white);
+}
+
+    .searchInputGroup input::placeholder {
+        color: white;
+    }
+
+.searchInputGroup input,
+.searchInputGroup button {
+    font-size: 1.5rem;
+}
+
+    .searchInputGroup button,
+    .searchInputGroup button:active {
+        width: 10%;
+        background-color: var(--clr-primary);
+        color: var(--clr-secondary);
+        border-start-end-radius: 10px;
+        border-end-end-radius: 10px;
+        border-top: solid 3px black;
+        border-right: solid 3px black;
+        border-bottom: solid 3px black;
+    }
+
+        .searchInputGroup button:hover {
+            color: var(--clr-white);
+        }
 
 .quotesContainer {
     display: flex;
@@ -272,10 +303,6 @@ main {
 
 .category-link {
     text-decoration: none;
-}
-
-#searchQuotesBtn:hover {
-    background-color: var(--clr-secondary);
 }
 
 .x-icon,
