Update quote js files

--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesButtonsPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesButtonsPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    var isForUserQuotes = this.ViewData["IsUserQuotes"] as bool? ?? false;
+    bool isForUserQuotes = this.ViewData["Title"].ToString() == "My Quotes";
 }
 
 @if (isForUserQuotes)
