--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -10,6 +10,7 @@
 @using Bookworm.Web.ViewModels.Languages
 @using Bookworm.Web.ViewModels.Books
 @using Bookworm.Web.ViewModels.Comments
+@using Bookworm.Web.ViewModels.Notification
 @using Bookworm.Web.ViewModels.Users
 @using Bookworm.Web.ViewModels.Identity
 @using Microsoft.AspNetCore.Identity
