--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -103,8 +103,9 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @if (this.User.Identity.IsAuthenticated)
     {
-        <script src="~/js/signalR/signalr.min.js"></script>
-        <script src="~/js/signalR/notification.js"></script>
+        <script src="~/js/signalr.min.js"></script>
+        <script src="~/js/notification/notification.js"></script>
+        <script src="~/js/notification/getUserNotificationCount.js"></script>
     }
     <partial name="PartialViews/_UserMessagesPartial" />
 
