--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,4 @@
 ﻿@using Bookworm.Web
-@using Bookworm.Common.Constants
 @using Bookworm.Common.Enums;
 @using Bookworm.Data.Models
 @using Bookworm.Web.ViewModels
@@ -14,6 +13,8 @@
 @using Bookworm.Web.ViewModels.Users
 @using Bookworm.Web.ViewModels.Identity
 @using Microsoft.AspNetCore.Identity
+@using Bookworm.Common.Constants
 @using static Bookworm.Common.Constants.GlobalConstants;
+@using static Bookworm.Common.Constants.TempDataMessageConstant;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
