--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -13,14 +13,18 @@
 <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
 
 <section class="uploadBookSection">
-    <form asp-controller="Book" asp-action="@action" method="post" enctype="multipart/form-data">
+    <form id="uploadBookForm"
+          asp-controller="Book"
+          asp-action="@action"
+          method="post"
+          enctype="multipart/form-data">
 
         @if (action == "Edit")
         {
             <input type="hidden" asp-for="@Model.Id" value="@Model.Id">
         }
 
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div asp-validation-summary="All" class="text-danger"></div>
 
         <div>
             <label asp-for="Title"></label>
