--- a/Web/Bookworm.Web/wwwroot/css/book/bookUpload.css
+++ b/Web/Bookworm.Web/wwwroot/css/book/bookUpload.css
@@ -3,11 +3,28 @@
     justify-content: center;
 }
 
-    .uploadBookSection form #addAuthorBtn {
-        background-color: var(--clr-secondary);
-        width: 100%;
-        font-size: 1.5rem;
+    .uploadBookSection form .validation-summary-errors ul {
+        padding: 0;
     }
+
+    .uploadBookSection form .validation-summary-errors ul li {
+        list-style: none;
+        text-align: center;
+        background-color: lightcoral;
+        color: var(--clr-white) !important;
+        padding: 0.5rem 0;
+        border-radius: 15px;
+    }
+
+        .uploadBookSection form .validation-summary-errors ul li:not(:first-child):not(:last-child) {
+            margin: 1rem 0;
+        }
+
+        .uploadBookSection form #addAuthorBtn {
+            background-color: var(--clr-secondary);
+            width: 100%;
+            font-size: 1.5rem;
+        }
 
         .uploadBookSection form #addAuthorBtn:hover {
             color: white;
