Update pagination view component

--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -30,9 +30,9 @@
 
 @if (Model.PagesCount > 1)
 {
-    <vc:pagination controller="Book"
-                   action="All"
-                   is-for-books="@true"
+    <vc:pagination action="All"
+                   controller="Book"
+                   is-for-books-in-category="@true"
                    model="@Model">
     </vc:pagination>
 }
