--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
@@ -55,7 +55,7 @@
             <li>
                 <a class="dropdown-item py-3"
                    asp-area=""
-                   asp-controller="FavoriteBook"
+                   asp-controller="Book"
                    asp-action="Favorites">
                     <i class="fas fa-heart me-2"></i>
                     Favorite Books
