--- a/Web/Bookworm.Web/wwwroot/css/book/bookAll.css
+++ b/Web/Bookworm.Web/wwwroot/css/book/bookAll.css
@@ -1,65 +1,5 @@
 ﻿@import 'bookListing.css';
-
-.select2-container--default .select2-selection--multiple {
-    font-size: 1.5rem;
-    border: solid 2px black !important;
-    margin-top: 2rem;
-    background-color: var(--clr-primary) !important;
-}
-
-.select2-selection__rendered {
-    padding-left: 20px !important;
-}
-
-.select2-search select2-search--inline {
-    color: white !important;
-}
-
-.select2-container--default
-.select2-selection--multiple
-.select2-selection__rendered
-.select2-selection__choice {
-    background-color: var(--clr-secondary);
-}
-
-.select2-container--default
-.select2-selection--multiple
-.select2-selection__rendered
-.select2-selection__choice
-.select2-selection__choice__remove {
-    color: black !important;
-}
-
-        .select2-container--default
-        .select2-selection--multiple
-        .select2-selection__rendered
-        .select2-selection__choice
-        .select2-selection__choice__remove:hover {
-            color: red !important;
-        }
-
-.select2-results {
-    font-size: 1.5rem !important;
-    background-color: var(--clr-primary) !important;
-    color: white !important;
-}
-
-.select2-search input {
-    color: white !important;
-}
-
-.select2-results__option--highlighted {
-    background-color: var(--clr-secondary) !important;
-}
-
-.select2-results__option[aria-selected=true] {
-    background-color: #c7fcec !important;
-}
-
-.select2-search__field::-webkit-input-placeholder,
-.select2-search__field::placeholder {
-    color: white !important;
-}
+@import '../select2.css';
 
 @media only screen and (max-width: 950px) {
     .booksSection {
