--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_EditCommentModalPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_EditCommentModalPartial.cshtml
@@ -13,7 +13,7 @@
                 <input type="hidden" name="editCommentId" class="modelIdInput" value="" />
                 <div class="modal-body">
                     <input type="hidden" name="bookId" value=@Model.Id />
-                    <textarea id="editCommentTextarea" name="content" rows="15"></textarea>
+                    <textarea class="bookComment" id="editCommentTextarea" name="content" rows="15"></textarea>
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-danger px-5 fs-3 w-100" data-bs-dismiss="modal">
