--- a/Web/Bookworm.Web/Views/Book/Details.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Details.cshtml
@@ -18,7 +18,7 @@
     </div>
     <ul class="list-group">
         <li class="list-group-item">
-            <strong>@Model.Title</strong>
+            @Model.Title
         </li>
         @if (Model.PublisherName != null)
         {
@@ -134,7 +134,7 @@
                 <h2 class="text-white">Comments: @Model.Comments.Count()</h2>
                 @if (Model.Comments.Count() > 1 && this.User.Identity.IsAuthenticated)
                 {
-                    <partial name="PartialViews/_CommentsButtonsPartial" />
+                    <partial name="PartialViews/_CommentsButtonsPartial" model="@Model.Id" />
                 }
                 <div class="commentsContainer">
                     @foreach (CommentViewModel comment in Model.Comments)
@@ -211,12 +211,5 @@
     <script src="~/js/book/comments.js"></script>
     <script type="module" src="~/js/book/addToFavorites.js"></script>
     <script src="/lib/tinymce/tinymce.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        tinymce.init({
-            selector: "textarea.bookComment",
-            placeholder: 'Type your comment here...',
-            plugins: "code wordcount lists preview searchreplace",
-            content_style: 'body { font-size: 14pt;}',
-        });
-    </script>
+    <script src="~/js/tinyMce.js"></script>
 }
