--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_CommentsButtonsPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_CommentsButtonsPartial.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="sortCommentsBtnsContainer">
+﻿@model int
+
+<div class="sortCommentsBtnsContainer">
     <div class="btn-group"
          role="group"
          aria-label="Basic radio toggle button group">
@@ -7,7 +9,7 @@
                name="btnradio"
                id="sortCommentsByDateAsc"
                autocomplete="off"
-               onclick="getSortedCommentsByDateAsc()">
+               onclick="getSortedComments('CreatedOnAsc', @Model)">
         <label class="btn border border-2" for="sortCommentsByDateAsc">Sort by date asc</label>
 
         <input type="radio"
@@ -15,7 +17,7 @@
                name="btnradio"
                id="sortCommentsByDateDesc"
                autocomplete="off"
-               onclick="getSortedCommentsByDateDesc()"
+               onclick="getSortedComments('CreatedOnDesc', @Model)"
                checked>
         <label class="btn border border-2" for="sortCommentsByDateDesc">Sort by date desc</label>
 
@@ -24,7 +26,7 @@
                name="btnradio"
                id="sortCommentsByNetWorthDesc"
                autocomplete="off"
-               onclick="getSortedCommentsByNetWorthDesc()">
+               onclick="getSortedComments('NetWorthDesc', @Model)">
         <label class="btn border border-2" for="sortCommentsByNetWorthDesc">Sort by net worth desc</label>
     </div>
 </div>
