--- a/Web/Bookworm.Web/wwwroot/css/book/bookFavorites.css
+++ b/Web/Bookworm.Web/wwwroot/css/book/bookFavorites.css
@@ -18,14 +18,14 @@
     }
 
         .booksSection .card .card-body {
-            background-color: var(--clr-primary);
+            background-color: var(--clr-secondary);
             display: flex;
             justify-content: center;
             gap: 0.5rem;
         }
 
             .booksSection .card .card-body .viewFavoriteBookBtn {
-                background-color: var(--clr-secondary);
+                background-color: var(--clr-primary);
                 flex-basis: 50%;
                 font-size: 1.5rem;
             }
@@ -36,7 +36,10 @@
                 font-size: 1.5rem;
             }
 
-                .booksSection .card .card-body .viewFavoriteBookBtn:hover,
-                .booksSection .card .card-body .removeFromListBtn:hover {
-                    color: black !important;
-                }
+            .booksSection .card .card-body .viewFavoriteBookBtn:hover {
+                color: var(--clr-secondary) !important;
+            }
+
+            .booksSection .card .card-body .removeFromListBtn:hover {
+                color: black !important;
+            }
