--- a/src/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
+++ b/src/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
@@ -27,7 +27,7 @@
             }
             <li>
                 <a class="dropdown-item py-3"
-                   asp-area="Account"
+                   asp-area=@GlobalConstants.AccountAreaName
                    asp-controller="Manage"
                    asp-action="Index">
                     <i class="fas fa-user-cog me-2"></i>
@@ -63,8 +63,8 @@
             </li>
         </ul>
     </li>
-    <form class="form-inline d-flex"
-          asp-area="Account"
+    <form method="post" class="form-inline d-flex"
+          asp-area=@GlobalConstants.AccountAreaName
           asp-controller="Authentication"
           asp-action="Logout">
         <button type="submit" class="nav-link logout-btn px-3">
@@ -76,7 +76,7 @@ else
 {
     <li class="nav-item mx-2">
         <a class="nav-link"
-           asp-area="Account"
+           asp-area=@GlobalConstants.AccountAreaName
            asp-controller="Authentication"
            asp-action="Login">
             Login
@@ -84,7 +84,7 @@ else
     </li>
     <li class="nav-item mx-2">
         <a class="nav-link"
-           asp-area="Account"
+           asp-area=@GlobalConstants.AccountAreaName
            asp-controller="Authentication"
            asp-action="Register">
             Register
