--- a/src/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/src/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -14,6 +14,7 @@
 @using Bookworm.Web.ViewModels.Identity
 @using Microsoft.AspNetCore.Identity
 @using Bookworm.Common.Constants
+@using static Bookworm.Web.StaticKeys.ViewDataKeys;
 @using static Bookworm.Common.Constants.GlobalConstants;
 @using static Bookworm.Common.Constants.TempDataMessageConstant;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
